Added Correct Link, Next Todo: Component extraction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row fixed-top slide-in-top noselect" style="background-color: #2f2f2f;">
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
       <div class="navbar-brand" style="color: white; padding-left: 5px;">
-        <a class="nav-link" style="color: white" href="http://localhost:4201/">
+        <a class="nav-link" style="color: white" href="https://github.com/Kennuel">
           Hendrik&nbsp;Wiechula
         </a>
       </div>
